# Final-Project---Lenka-Ferrer-Alice-Monti

./: README.md  settings.json
final_project/: main.py
final_project/real_estate_toolkit/: our_main.py  pyproject.toml
final_project/real_estate_toolkit/src/real_estate_toolkit/agent_based_model/: common.py  consumers.py  houses.py  market.py  simulation.py
final_project/real_estate_toolkit/src/real_estate_toolkit/analytics/: exploratory.py
final_project/real_estate_toolkit/src/real_estate_toolkit/data/: cleaner.py  descriptor.py  loader.py
final_project/real_estate_toolkit/src/real_estate_toolkit/ml_models/: predictor.py
final_project/real_estate_toolkit/src/real_estate_toolkit/ml_models/outputs/: submission.csv  test_predictor.py
